# custom_components/melcloudhome/api/__init__.py
@@ -2,36 +2,23 @@
 
 from .auth import MELCloudHomeAuth
 from .client import MELCloudHomeClient
-from .const import (
-    BASE_URL,
-    FAN_SPEEDS,
-    OPERATION_MODES,
-    USER_AGENT,
-    VANE_HORIZONTAL_DIRECTIONS,
-    VANE_VERTICAL_DIRECTIONS,
-)
+from .const_shared import BASE_URL, USER_AGENT
 from .exceptions import ApiError, AuthenticationError, MELCloudHomeError
-from .models import AirToAirUnit, Building, DeviceCapabilities, Schedule, UserContext
+from .models import Building, UserContext
+from .models_ata import AirToAirUnit, DeviceCapabilities
+from .models_atw import AirToWaterUnit
 
 __all__ = [
-    # Constants
     "BASE_URL",
-    "FAN_SPEEDS",
-    "OPERATION_MODES",
     "USER_AGENT",
-    "VANE_HORIZONTAL_DIRECTIONS",
-    "VANE_VERTICAL_DIRECTIONS",
-    # Models
     "AirToAirUnit",
+    "AirToWaterUnit",
     "ApiError",
     "AuthenticationError",
     "Building",
     "DeviceCapabilities",
     "MELCloudHomeAuth",
-    # Client
     "MELCloudHomeClient",
-    # Exceptions
     "MELCloudHomeError",
-    "Schedule",
     "UserContext",
 ]
